--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
   font-family: arial, sans-serif;
-/*  border: 1px solid black; */
+  /*border: 1px solid black;*/
 }
 
 #top_bar {
@@ -9,12 +9,13 @@
 }
 
 #top_bar img {
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
 }
 
 .center {
   height: 233px;
+  width: 50%;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -25,6 +26,33 @@
 .center img {
   max-width: 272px;
   max-height: 201px;
+}
+
+.search {
+  border: medium;
+  padding: 0px;
+  margin: 0px;
+  width: 70%;
+  height: 36px;
+  line-height: 34px;
+  background: transparent;
+  position: absolute;
+  z-index: 6;
+  left: -145px;
+  outline: medium none;
+  box-shadow: 1px 1px 5px #888888;
+}
+
+button {
+  position: relative;
+  left: 50%;
+  top: 50%;
+  margin-left: -150px;
+  margin-top: 500px;
+}
+
+.lucky {
+  left: 300px;
 }
 
 .footer{
@@ -41,13 +69,6 @@
 
 .left {
 
-}
-
-input {
-  position: absolute;
-  width: 100%;
-  border-radius: 5px;
-  margin: auto;
 }
 
 ul {
