--- a/style.css
+++ b/style.css
@@ -13,6 +13,13 @@
   height: 20px;
 }
 
+#top_bar button {
+  background-color: #4683ea;
+  color: white;
+  font-weight: bold;
+  border: 1px solid #4285f4;
+}
+
 .center {
   position: fixed;
   top: 25%;
@@ -37,10 +44,10 @@
   box-shadow: 0 2px 2px rgb(203, 203, 203);
   line-height: normal;
   font-family: Arial, sans-serif;
-  /*background: url(https://infogalactic.com/w/images/2/22/Google_microphone_logo.png);
+  background: url(https://infogalactic.com/w/images/2/22/Google_microphone_logo.png);
   background-repeat: no-repeat;
   background-position: right 15px center;
-  background-size: 14px; */
+  background-size: 14px;
 }
 
 .center input:hover{
@@ -57,6 +64,11 @@ button {
   font-weight: bold;
 }
 
+button:hover {
+    border: 1px solid #c6c6c6;
+    background-color: #f8f8f8;
+}
+
 .search {
   border: medium;
   padding: 0px;
@@ -70,18 +82,6 @@ button {
   left: -145px;
   outline: medium none;
   box-shadow: 1px 1px 5px #888888;
-}
-
-button {
-  position: relative;
-  left: 50%;
-  top: 50%;
-  margin-left: -150px;
-  margin-top: 500px;
-}
-
-.lucky {
-  left: 300px;
 }
 
 .footer{
