--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 * {
   font-family: arial, sans-serif;
-  border: 1px solid black;
+  /*border: 1px solid black;*/
 }
 
 #top_bar {
@@ -8,7 +8,14 @@
   float: right;
 }
 
+#top_bar li {
+  padding-right: 8px;
+  margin-top: -10 px;
+}
+
 #top_bar img {
+  position: relative;
+  top: 12px ;
   opacity: .55;
   color: #000;
 }
@@ -97,6 +104,10 @@ button:hover {
   border-top: 1px solid #e4e4e4;
 }
 
+.footer li {
+  padding-right: 8px;
+}
+
 #left {
   float: left;
   margin-left: 30px;
@@ -115,6 +126,6 @@ ul {
 
 li {
   display: inline;
-  line-height: 24px;
+
   font-size: 13px;
 }
